# advent-of-code

./: README.md  pyproject.toml
advent_of_code/y2022/: d1.py  d2.py  d3.py  d4.py  d5.py  util.py
tests/y2022/: d1_test.py  d2_test.py  d3_test.py  d4_test.py  d5_test.py  util_test.py
tools/: new_day.py
