[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Garrett Sweeney <garrett.d.sweeney@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
requests = "^2.28.1"
responses = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
